[tool.poetry]
name = "reader-queue"
version = "0.1.0"
description = "A system for managing consumption of web based content"
authors = ["Matthew Cox <mr.mcox@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
SQLAlchemy = "^1.3.22"
psycopg2-binary = "^2.8.6"
Flask-Migrate = "^2.5.3"
Flask-Script = "^2.0.6"
httpx = "^0.16.1"
maya = "^0.6.1"
Bootstrap-Flask = "^1.5.1"
Flask-Login = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
black = "^20.8b1"
pytest-httpx = "^0.10.1"
python-dotenv = {extras = ["cli"], version = "^0.15.0"}
pytest-flask = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
